Improved function documentation

--- a/vignettes/statgenSTA.html
+++ b/vignettes/statgenSTA.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Bart-Jan van Rossum" />
 
-<meta name="date" content="2020-08-19" />
+<meta name="date" content="2020-08-21" />
 
 <title>Modeling field trials using statgenSTA</title>
 
@@ -319,7 +319,7 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 <h1 class="title toc-ignore">Modeling field trials using statgenSTA</h1>
 <h4 class="author">Bart-Jan van Rossum</h4>
-<h4 class="date">2020-08-19</h4>
+<h4 class="date">2020-08-21</h4>
 
 
 
@@ -563,7 +563,7 @@ Dropping one or more trials from a <code>TD</code> object can be done using the 
 <td>trait = <strong>subBlock</strong> + genotype + <span class="math inline">\(\epsilon\)</span></td>
 </tr>
 <tr class="even">
-<td>resovable incomplete block design</td>
+<td>resolvable incomplete block design</td>
 <td>res.ibd</td>
 <td>trait = <em>repId</em> + <strong>repId:subBlock</strong> + genotype + <span class="math inline">\(\epsilon\)</span></td>
 </tr>
@@ -575,7 +575,7 @@ Dropping one or more trials from a <code>TD</code> object can be done using the 
 <tr class="even">
 <td>row column design</td>
 <td>rowcol</td>
-<td>trait = <strong>rowId</strong> + <strong>colId</strong> + genotype +<span class="math inline">\(\epsilon\)</span></td>
+<td>trait = <strong>rowId</strong> + <strong>colId</strong> + genotype + <span class="math inline">\(\epsilon\)</span></td>
 </tr>
 <tr class="odd">
 <td>resolvable row column design</td>
